[workspace]
members = ["cw-*"]

[profile.release.package.cw-subscription]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[patch.crates-io]
cw0 = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", tag = "v0.6.0" }
cw2 = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", tag = "v0.6.0" }
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", tag = "v0.6.0" }
cw-storage-plus = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", tag = "v0.6.0" }
cw20-base = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", tag = "v0.6.0" }
