[package]
name = "cw-subscription"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw0 = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", rev = "29791ba9318feae29f8b0591871c061ffc0b9e3e" }
cw2 = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", rev = "29791ba9318feae29f8b0591871c061ffc0b9e3e" }
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", rev = "29791ba9318feae29f8b0591871c061ffc0b9e3e" }
cw-storage-plus = { git = "https://github.com/CosmWasm/cosmwasm-plus.git", rev = "29791ba9318feae29f8b0591871c061ffc0b9e3e", features = ["iterator"] }
cosmwasm-std = { version = "0.14.0-beta4", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
chrono = "0.4"

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0-beta3" }
serde_json = "1.0"

[features]
default = []
off-chain = []
