[package]
name = "cw-subscription"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw0 = "0.6.0-beta2"
cw2 = "0.6.0-beta2"
cw20 = "0.6.0-beta2"
cw-storage-plus = { version = "0.6.0-beta2", features = ["iterator"] }
cosmwasm-std = { version = "0.14.0-beta4", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
chrono = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.14.0-beta3"
serde_json = "1.0"
