[package]
name = "cw-subscription"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw0 = "0.6.0"
cw2 = "0.6.0"
cw20 = "0.6.0"
cw-storage-plus = { version = "0.6.0", features = ["iterator"] }
cosmwasm-std = { version = "0.14.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
chrono = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.14.0"
serde_json = "1.0"
