[tool.poetry]
name = "integration_tests"
version = "0.1.0"
description = ""
authors = ["huangyi <huang@crypto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
